fixed menu getting hidden behind background when wrapping

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -19,15 +19,16 @@ body
   background-color: $tan
   font-family: 'Ribeye Marrow', cursive
   font-size: 1.3em
-  padding: 1em 3em
 
 #menu
   text-align: right
+  padding: 1em 3em
 
 #user
   float: right
   display: block
-  margin-left: .3em
+  margin-left: .5em
+  padding: 1em 3em 0 0
 
 a#title
   font-weight: bold
@@ -72,9 +73,6 @@ a.new, #user a
   cursor: crosshair
 
 #background
-  position: absolute
-  top: 3em
-  left: 0
   height: 10000px
   width: 10000px
 
